Fix some images are not responsive

--- a/PaperTheme/css/font.css
+++ b/PaperTheme/css/font.css
@@ -970,3 +970,9 @@ h1, h2, h3, h4, h5, .h3, navbar-brand {
   color: #2196f3;
   font-size: 1.5em;
 }
+
+.wp-caption-text {
+  color: #686868;
+  font-size: 1.2em !important;
+  text-align: center;
+}
